# revenant

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README  apppath.cpp  apppath.hpp  argchecker.cpp  argchecker.hpp  aux.cmake  blockset.hpp  camera2d.cpp  camera2d.hpp  camera3d.cpp  camera3d.hpp  chunk.hpp  clear.hpp  clock.cpp  color.cpp  color.hpp  comment.cpp  comment.hpp  copyright_notice.txt  dataswitch.hpp  debug.cpp  debug.hpp  debuggui_if.cpp  debuggui_if.hpp  differential.hpp  dir.cpp  dir.hpp  dir_depLinux.cpp  dir_depLinux.hpp  dir_depWin.cpp  dir_depWin.hpp  drawable.cpp  drawable.hpp  drawgroup.cpp  drawgroup.hpp  drawgroup_proxy.cpp  (+325 more)
dc/: animation.cpp  animation.hpp  bbox.hpp  channel.cpp  channel.hpp  channel_if.hpp  common.hpp  frameout_if.hpp  jat_if.hpp  joint_at.cpp  joint_at.hpp  jointquery_if.hpp  mesh.hpp  mesh_if.cpp  mesh_if.hpp  model.cpp  model.hpp  model_if.hpp  node.hpp  node_cached.cpp  node_cached.hpp  node_frame.cpp  node_frame.hpp  pos_sampler.cpp  pos_sampler.hpp  pose_frame.cpp  pose_frame.hpp  pose_frame_if.hpp  pose_sampler.hpp  pose_sampler_if.hpp  qm_cached.cpp  qm_cached.hpp  qm_fixed.cpp  qm_fixed.hpp  qm_fixedseq.cpp  qm_fixedseq.hpp  qm_if.hpp  sampler.cpp  sampler.hpp  sampler_if.hpp  (+7 more)
debug_gui/: child.cpp  child.hpp  column.cpp  column.hpp  constant.cpp  constant.hpp  entry.hpp  entry_field.cpp  entry_field.hpp  group.cpp  header.cpp  id.cpp  id.hpp  indent.cpp  indent.hpp  listview.hpp  logger.cpp  logger.hpp  menu.cpp  menu.hpp  menubar.cpp  menubar.hpp  popup.cpp  print.cpp  print.hpp  profiler.cpp  profiler.hpp  resource_window.cpp  resource_window.hpp  spacing.cpp  sstream.cpp  state_storage.cpp  state_storage.hpp  style.hpp  textfilter.cpp  textfilter.hpp  tree.cpp  tree.hpp  treeview.hpp  window.cpp  (+1 more)
debug_gui/dc/: mesh.cpp  model.cpp  tfnode.cpp  tfroot.cpp
debug_gui/gltf/: mesh.cpp  model.cpp  rt_uniform.cpp
debug_gui/types/: angle.cpp  angle.hpp  camera2d.cpp  camera2d.hpp  draw_texture.cpp  drawable.cpp  drawgroup.cpp  drawsort.cpp  drawtag.cpp  enum.cpp  gl_bstate.cpp  gl_buffer.cpp  gl_format.cpp  gl_program.cpp  gl_shader.cpp  gl_texture.cpp  gl_vstate.cpp  gpu.cpp  interval.cpp  matrix.cpp  matrix.hpp  object.cpp  pose2d.cpp  pose2d.hpp  pose3d.cpp  primitive.cpp  quaternion.cpp  resmgr.cpp  resmgr.hpp  resmgr_named.hpp  resource.cpp  scene.cpp  scene_mgr.cpp  tech.cpp  texture_filter.cpp  texture_source.cpp  uniform_ent.cpp  updgroup.cpp  uri.cpp  vdecl.cpp  (+2 more)
drawcmd/: aux.cpp  cmd.cpp  cmd.hpp  cmd_if.hpp  cmd_unif_if.hpp  flipface.cpp  queue_if.hpp  task.cpp  task.hpp
drawcmd/types/: matrix.cpp  matrix.hpp  vector.hpp
drawtoken/: bstate.cpp  bstate.hpp  buffer.cpp  buffer.hpp  clear.cpp  clear.hpp  drawtoken.cpp  drawtoken.hpp  drawtoken_t.hpp  framebuffer.cpp  framebuffer.hpp  glx.cpp  glx.hpp  make_uniform.hpp  matrix.hpp  program.cpp  program.hpp  scissor.cpp  scissor.hpp  task.cpp  task.hpp  texture.cpp  texture.hpp  token.hpp  tokenbuffer.hpp  tokenml.cpp  tokenml.hpp  uniform.hpp  vector.hpp  viewport.cpp  viewport.hpp  vstate.hpp
gltf/: accessor.cpp  accessor.hpp  animation.cpp  animation.hpp  asset.cpp  asset.hpp  buffer.cpp  buffer.hpp  bufferview.cpp  bufferview.hpp  camera.cpp  camera.hpp  check.hpp  data_pair.hpp  dataquery_if.hpp  dataquery_if_base.hpp  dataref.hpp  dc_common.hpp  dc_mesh.cpp  dc_mesh.hpp  dc_model.cpp  dc_model.hpp  enums.hpp  exceptions.cpp  exceptions.hpp  gltf.cpp  gltf.hpp  idtag.hpp  image.cpp  image.hpp  json_parse.hpp  json_types.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  mgr.cpp  mgr.hpp  mk.cpp  mk.hpp  (+43 more)
gltf/v1/: accessor.cpp  accessor.hpp  animation.cpp  animation.hpp  asset.cpp  buffer.cpp  buffer.hpp  bufferview.cpp  bufferview.hpp  camera.cpp  camera.hpp  check.hpp  dataquery_if.hpp  dataref.hpp  dc_common.hpp  dc_mesh.cpp  dc_mesh.hpp  dc_model.cpp  dc_model.hpp  enums.hpp  exceptions.cpp  exceptions.hpp  gltf.cpp  gltf.hpp  image.cpp  image.hpp  json_types.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  mgr.cpp  node.cpp  node.hpp  program.hpp  (+33 more)
glwrapper/: gl_wrapper.cpp
handle/: animation.hpp  camera.hpp  common.hpp  gui.hpp  model.hpp  object.hpp  opengl.hpp  rw.hpp  sdl.hpp  sound.hpp  text.hpp  uri.hpp
lua/: lcv.cpp  lcvalue.cpp  luastate.cpp
lua_define/: i_frea.cpp  i_input.cpp  i_object.cpp  i_opengl.cpp  i_other.cpp  i_random.cpp  i_sound.cpp  i_updater.cpp  i_utils.cpp
opengl_define/: glformat_const.inc  glformat_sdl.inc  linux_gl.inc  mingw_gl.inc
parse/: glx_block.cpp  glx_makesetting.cpp  glx_output.cpp  glx_parse.cpp  glx_tech.cpp
random/: path.hpp
resource/: pathlist
serialization/: apppath.hpp  pose2d.hpp  pose3d.hpp  resmgr_app.hpp  sdl_rw.hpp  sound.hpp  sound_common.hpp  sound_depAL.hpp  sound_depSL.hpp  uri.hpp  uri_data.hpp  uri_file.hpp
src/: abstbuffer.hpp  apppath.cpp  apppath.hpp  argchecker.hpp  blockset.hpp  cache.hpp  camera2d.cpp  camera2d.hpp  camera3d.cpp  camera3d.hpp  char_code.cpp  char_code.hpp  clear.hpp  clock.cpp  clock.hpp  color.cpp  color.hpp  compiler_macro.hpp  debug.cpp  debug.hpp  detect_method.hpp  dir.cpp  dir.hpp  dir_depLinux.cpp  drawable.cpp  drawable.hpp  drawgroup.cpp  drawgroup.hpp  drawgroup_proxy.cpp  drawproc.cpp  drawsort.cpp  drawsort.hpp  drawtag.cpp  drawthread.cpp  drawthread.hpp  emplace.hpp  fbrect.cpp  fbrect.hpp  filetree.hpp  flagptr.hpp  (+187 more)
testprog/: corner_overlay.hpp  fpcamera.cpp  fpcamera.hpp  mygui.hpp  scenebase.cpp  scenebase.hpp  test.hpp
tests/: color_test.cpp  filetree.cpp  filetree_func.cpp  gameloop_test.cpp  lcv_classtest.cpp  lcv_classtest.hpp  lcv_classtest_value.cpp  lcv_myclasstest.cpp  lcv_quattest.cpp  lcv_test.cpp  lcv_test2.cpp  lcv_test_value.cpp  lcv_vectortest.cpp  lcvtest.hpp  luastate_test.cpp  luatest.cpp  luatest.hpp  lvalue_test.cpp  path_test.cpp  profiler_test.cpp  test.hpp
unituple/: defines.hpp  operator.hpp
util/: fbclear.cpp  fbclear.hpp  fbswitch.cpp  fbswitch.hpp  gle_nest.hpp  sys_unif.hpp  text.cpp  text.hpp  text2d.cpp  text2d.hpp  text3d.cpp  text3d.hpp  texthud.cpp  texthud.hpp  viewport.cpp  viewport.hpp
(+711 files in other folders)
